Bug 414190. getBoundingClientRect and getClientRects need special treatment of tables. r+sr=mats